--- a/index.html
+++ b/index.html
@@ -29,6 +29,31 @@
     <link rel="stylesheet" href="./src/js/main.js" />
     <link rel="stylesheet" href="./src/js/1-gallery.js" />
     <link rel="stylesheet" href="./src/js/language.js" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "AutoRepair",
+        "name": "Автосервіс Каскад",
+        "image": "https://kaskad.in.ua/images/logo.png",
+        "url": "https://kaskad.in.ua",
+        "telephone": "+380668375666",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "вул. Ушинського, 2 а",
+          "addressLocality": "Павлоград",
+          "addressRegion": "Дніпропетровська область",
+          "postalCode": "51400",
+          "addressCountry": "UA"
+        },
+        "openingHours": "Mo-Sa 08:00-18:00",
+        "priceRange": "$$",
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 48.52613,
+          "longitude": 35.87073
+        }
+      }
+    </script>
   </head>
   <header id="header" class="header">
     <div class="header-container">
@@ -280,35 +305,57 @@
           <div class="main-content-div">
             <div class="main-content">
               <h2 data-translate="main-content-title">
-                Автосервис «Каскад» в Павлограде – надежный партнер для Вашего
-                автомобиля уже более 20 лет
+                Автосервіс «Каскад» у Павлограді – професійний догляд за вашим
+                авто
               </h2>
               <p data-translate="main-content-txt01">
-                Когда Вашему автомобилю требуется внимание, важно доверить его
-                тем, кто знает свое дело. Автосервис «Каскад» работает в
-                Павлограде с 2005 года, и за это время мы заслужили репутацию
-                надежного и профессионального сервиса, способного решить любую
-                задачу – от простого технического обслуживания до сложного
-                ремонта.
+                СТО «Каскад» у Павлограді — це надійне місце, де автомобілі
+                отримують комплексне обслуговування від досвідчених майстрів. Ми
+                спеціалізуємось на ремонті авто будь-якої складності та
+                технічному обслуговуванні транспортних засобів усіх марок. У
+                нашому автосервісі ви можете розраховувати на професійну
+                діагностику авто, ремонт ходової частини, обслуговування
+                гальмівної системи, а також на послуги з ремонту двигуна,
+                встановлення ГБО та заправку автокондиціонерів.
               </p>
               <p data-translate="main-content-txt02">
-                Наш опыт – это тысячи отремонтированных автомобилей, довольные
-                клиенты и уверенность в том, что мы справимся даже с самыми
-                неочевидными неисправностями. Мы не просто меняем детали – мы
-                находим причину проблемы и устраняем ее, чтобы Ваш автомобиль
-                служил вам долго и безотказно. В нашем распоряжении современное
-                оборудование, качественные запчасти и команда мастеров, которые
-                действительно разбираются в своем деле.
+                Ми пропонуємо комплексний підхід: якісні запчастини,
+                сертифіковані технічні рідини та високоточне обладнання.
+                Протягом майже 20 років наш автосервіс у Павлограді співпрацює з
+                перевіреними постачальниками — офіційними дистриб’юторами, що
+                гарантує якість усіх компонентів. Це дозволяє не лише виконувати
+                якісний ремонт авто, але й надавати гарантію на всі види робіт.
+                Наші майстри завжди допомагають підібрати оптимальне рішення з
+                урахуванням балансу ціни та надійності, дозволяючи економити без
+                втрати якості. Детальніше про деталі, запчастини та витратні
+                матеріали можна дізнатись у відповідному розділі нашого сайту.
               </p>
               <p data-translate="main-content-txt03">
-                Здесь Вам не предложат ненужных услуг – только честную
-                диагностику и прозрачные цены. Мы понимаем, как важно для вас
-                быть уверенным в своем автомобиле, и делаем все, чтобы после
-                визита в «Каскад» Вы могли спокойно отправляться в дорогу.
+                Обираючи СТО «Каскад» у Павлограді, ви отримуєте не просто
+                технічне обслуговування автомобіля — ви обираєте чесний підхід,
+                професіоналізм та повну відповідальність за результат. Ми
+                працюємо з авто так, ніби це наші власні: з повагою, турботою та
+                уважністю до дрібниць. У разі спірних ситуацій завжди шукаємо
+                компроміс і відкриті до зворотного зв’язку. Приймаємо оплату
+                готівкою та карткою, надаємо консультації щодо ремонту, догляду,
+                заміни рідин та діагностики, а також діємо система знижок для
+                постійних клієнтів.
               </p>
               <p data-translate="main-content-txt04">
-                Приезжайте и убедитесь сами – Ваш автомобиль заслуживает лучшего
-                обслуживания!
+                Кожен автовласник, незалежно від типу авто, рано чи пізно
+                стикається з необхідністю звернення на автосервіс — чи то
+                планове технічне обслуговування, чи серйозний ремонт вузлів.
+                Машини, які регулярно використовуються або навпаки — тривалий
+                час стоять, однаково потребують перевірки: зношується ходова
+                частина, старіють рідини, знижуються характеристики гальмівної
+                системи та електроніки. Саме тому регулярна діагностика авто —
+                ключ до його довгого і безпечного життя.
+              </p>
+              <p data-translate="main-content-txt05">
+                СТО «Каскад» — це сучасний автосервіс у Павлограді, де ви завжди
+                можете розраховувати на повний спектр послуг, уважне ставлення,
+                швидке виконання та справедливу ціну. Якою б не була причина
+                звернення — ми завжди готові вам допомогти.
               </p>
             </div>
             <div>
@@ -620,53 +667,69 @@
           <div class="main-content-div">
             <div class="main-content">
               <h2 data-translate="main-content-title1">
-                Автосервис «Каскад» в Павлограде – это профессиональный уход для
-                Вашего автомобиля.
+                Автосервіс «Каскад» у Павлограді – професійний догляд за вашим
+                авто.
               </h2>
               <p data-translate="main-content-txt1">
-                Мы предлагаем комплексный подход к обслуживанию автомобилей: от
-                качественных запчастей и технических жидкостей до
-                профессионального ремонта любой сложности. За 20 лет работы мы
-                сформировали надежную сеть поставщиков, сотрудничая с
-                официальными дистрибьюторами. Это позволяет нам гарантировать
-                качество деталей и предоставлять гарантию на все виды работ.
-                Наши специалисты подберут оптимальные решения по соотношению
-                цены и качества, помогая Вам экономить без ущерба для
-                результата. Подробнее о запчастях Вы можете узнать в
-                соответствующем разделе сайта.
+                Автосервіс «Каскад» — це надійне СТО у Павлограді, де ваш
+                автомобіль отримає дійсно якісне обслуговування. Ми працюємо з
+                2005 року, і за цей час здобули довіру сотень автовласників. До
+                нас звертаються за діагностикою, ремонтом та обслуговуванням
+                різних марок і моделей — від бюджетних авто до преміальних
+                машин. Наша команда майстрів має великий досвід, сучасне
+                обладнання та чітке розуміння того, як швидко та грамотно
+                усунути будь-яку несправність. Ми не просто змінюємо деталі — ми
+                шукаємо справжню причину проблеми та усуваємо її, щоб ваша
+                машина працювала надійно і без перебоїв.
               </p>
               <p data-translate="main-content-txt2">
-                Выбирая «Каскад», Вы получаете не просто ремонт, а честный
-                сервис, внимательное отношение и гарантированный результат. Мы
-                работаем с автомобилями так же бережно, как с собственными, и
-                полностью отвечаем за качество наших услуг. В спорных ситуациях
-                мы всегда идем навстречу клиенту. Предлагаем гибкую систему
-                скидок, принимаем как наличный, так и безналичный расчет. Наши
-                специалисты бесплатно проконсультируют Вас по любым вопросам,
-                связанным с обслуживанием и ремонтом, и сделают все, чтобы Вы
-                остались довольны!
+                Ми розуміємо, що для власника автомобіля важливо мати надійного
+                партнера, якому можна довірити транспорт. Саме тому до кожного
+                клієнта ми ставимося з повагою і відповідальністю. Якщо ви
+                шукаєте автосервіс у Павлограді, який не зриває терміни, не
+                завищує ціни та дійсно ремонтує, а не просто «затирає проблему»
+                — приїжджайте у «Каскад». Ми завжди відкриті до співпраці,
+                відповімо на всі запитання та допоможемо вам підтримувати ваш
+                автомобіль у відмінному стані.
               </p>
               <h2
                 class="two-title-content"
                 data-translate="main-content-title2"
               >
-                Комплексный ремонт и обслуживание автомобилей
+                Ремонт, обслуговування та діагностика у СТО «Каскад»
               </h2>
               <p data-translate="main-content-txt3">
-                Каждому автовладельцу рано или поздно приходится сталкиваться с
-                необходимостью ремонта – будь то плановое ТО или серьезное
-                восстановление узлов автомобиля. Это естественно: в процессе
-                эксплуатации все механизмы подвергаются износу. При этом даже
-                машины, которые долго стоят без движения, требуют внимания –
-                детали могут пересыхать, а жидкости терять свои свойства.
-                Регулярно используемым автомобилям профессиональное обслуживание
-                нужно еще чаще – только так можно избежать неожиданных поломок и
-                дорогостоящего ремонта.
+                У нашому автосервісі проводиться повне технічне обслуговування
+                авто: діагностика, ремонт двигуна, ходової частини, гальмівної
+                системи, обслуговування кондиціонерів, а також встановлення і
+                налаштування ГБО. Ми використовуємо лише перевірені запчастини
+                та дотримуємось усіх технічних норм. Обслуговування проводиться
+                прозоро: ви завжди знаєте, що саме потребує ремонту, чому і
+                скільки це коштує. Ми не нав’язуємо зайвих послуг — тільки те,
+                що дійсно потрібно для безпеки та стабільної роботи вашого авто.
+                Кожна машина проходить фінальну перевірку після ремонту, щоб ви
+                могли бути впевнені у її надійності.
               </p>
               <p data-translate="main-content-txt4">
-                Автосервис «Каскад» предлагает полный спектр услуг для
-                автомобилей любых марок. Какими бы ни были причины Вашего визита
-                – мы готовы помочь!
+                Автосервіс «Каскад» у Павлограді — це місце, де ви можете бути
+                впевнені у якісному ремонті вашого автомобіля. Наша
+                автомайстерня працює в Павлограді понад 18 років і за цей час
+                стала відомою серед водіїв як чесне та надійне СТО, яке
+                насправді розуміється на техніці. Ми пропонуємо повний спектр
+                послуг — від регулярного технічного обслуговування до складного
+                ремонту авто будь-якої марки. Наші майстри виконують ремонт
+                ходової частини, двигуна, гальм, кондиціонерів, а також
+                займаються встановленням і обслуговуванням ГБО. Всі роботи
+                супроводжуються комп’ютерною діагностикою, щоб точно виявити
+                проблему і не витрачати ваш час і гроші на зайве. Ми
+                використовуємо тільки перевірені запчастини та працюємо на
+                сучасному обладнанні, тому можемо гарантувати результат. У
+                «Каскаді» ви не отримаєте шаблонного підходу — кожен автомобіль
+                проходить індивідуальний огляд, і кожен клієнт отримує чітку,
+                зрозумілу консультацію. Якщо ви шукаєте СТО у Павлограді, де вам
+                не нав’яжуть зайвих послуг, а справді допоможуть — звертайтесь
+                до нас. Ми працюємо для того, щоб ваш автомобіль був у справному
+                стані та дарував вам впевненість на дорозі.
               </p>
             </div>
           </div>
