--- a/ustanovka-gbo.html
+++ b/ustanovka-gbo.html
@@ -397,11 +397,11 @@
             <div>
               <picture>
                 <source
-                  srcset="./src/img/gbo/gbo-main.webp"
+                  srcset="./src/img/gbo/gaz-na-avto.webp"
                   type="image/webp"
                 />
                 <img
-                  src="./src/img/gbo/gbo-main.jpg"
+                  src="./src/img/gbo/gaz-na-avto.jpg"
                   alt="shema-ustanovki"
                   class="gbo-main-img"
                   loading="lazy"
@@ -418,11 +418,11 @@
             <div class="service-gbo-card">
               <picture>
                 <source
-                  srcset="./src/img/gbo/serv-gbo-img1.webp"
+                  srcset="./src/img/gbo/ustanovka-gbo.webp"
                   type="image/webp"
                 />
                 <img
-                  src="./src/img/gbo/serv-gbo-img1.jpg"
+                  src="./src/img/gbo/ustanovka-gbo.jpg"
                   alt="ustanovka_gbo"
                   class="service-gbo-img"
                   loading="lazy"
@@ -494,11 +494,11 @@
             <div class="service-gbo-card">
               <picture>
                 <source
-                  srcset="./src/img/gbo/serv-gbo-img3.webp"
+                  srcset="./src/img/gbo/remont-gbo.webp"
                   type="image/webp"
                 />
                 <img
-                  src="./src/img/gbo/serv-gbo-img3.jpg"
+                  src="./src/img/gbo/remont-gbo.jpg"
                   alt="obslugivaniye_i_remont"
                   class="service-gbo-img"
                   loading="lazy"
@@ -568,11 +568,11 @@
             <div class="service-gbo-card">
               <picture>
                 <source
-                  srcset="./src/img/gbo/serv-gbo-img2.webp"
+                  srcset="./src/img/gbo/diagnostika-gbo.webp"
                   type="image/webp"
                 />
                 <img
-                  src="./src/img/gbo/serv-gbo-img2.jpg"
+                  src="./src/img/gbo/diagnostika-gbo.jpg"
                   alt="diagnostika"
                   class="service-gbo-img"
                   loading="lazy"
@@ -644,11 +644,11 @@
             <div class="service-gbo-card">
               <picture>
                 <source
-                  srcset="./src/img/gbo/serv-gbo-img4.webp"
+                  srcset="./src/img/gbo/sertifikacija-gbo.webp"
                   type="image/webp"
                 />
                 <img
-                  src="./src/img/gbo/serv-gbo-img4.jpg"
+                  src="./src/img/gbo/sertifikacija-gbo.jpg"
                   alt="registracija_v_mreo"
                   class="service-gbo-img"
                   loading="lazy"
