--- a/parts.html
+++ b/parts.html
@@ -1,36 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Кодировка и масштабирование -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/img/kaskad/hero3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Favicon -->
+    <link rel="icon" href="./favicon.png" type="image/png" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="./favicon.png" type="image/png" />
-    <title>Запчастини на авто в Павлограді | Деталі на авто</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="./src/style.css" />
+
+    <!-- Title & Meta Description -->
+    <title>Запчастини на авто в Павлограді | Автодеталі з гарантією</title>
     <meta
       name="description"
-      content="🔧 Автосервіс «Каскад» у Павлограді: професійний підбір автозапчастин
-
-      ✔ Підбір оригінальних та аналогових запчастин для будь-яких марок авто
-      ✔ Постачання деталей під замовлення (двигуни, коробки передач, ходова частина)
-      ✔ Консультація щодо сумісності та якості комплектуючих
-      ✔ Пошук рідкісних запчастин через перевірених постачальників
-      ✔ Гарантія на всі запчастини (оригінал та сертифіковані аналоги)
-      ✔ Діагностика перед замовленням для точного визначення необхідних деталей
-      
-      🚗 Знайдемо рішення для будь-якого авто! ☎️ Телефонуйте для консультації!"
+      content="🔧 Автосервіс «Каскад» у Павлограді — підбір та постачання оригінальних і аналогових автозапчастин з гарантією. Знайдемо деталі для будь-якого авто!"
     />
-    <link rel="stylesheet" href="./src/style.css" />
-    <link rel="stylesheet" href="./src/js/main.js" />
-    <link rel="stylesheet" href="./src/js/language.js" />
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://kaskad.in.ua/zapchastyny" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Запчастини на авто в Павлограді | Автосервіс Каскад"
+    />
+    <meta
+      property="og:description"
+      content="✔ Підбір і доставка автозапчастин у Павлограді. Оригінали й аналоги, гарантія, консультації. Телефонуйте — допоможемо!"
+    />
+    <meta property="og:image" content="https://kaskad.in.ua/images/logo.png" />
+    <meta property="og:url" content="https://kaskad.in.ua/zapchastyny" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Запчастини на авто | Каскад Павлоград"
+    />
+    <meta
+      name="twitter:description"
+      content="Підбір і доставка деталей. Гарантія. Консультації. ☎️"
+    />
+    <meta name="twitter:image" content="https://kaskad.in.ua/images/logo.png" />
+
+    <!-- Scripts -->
+    <script src="./src/js/main.js" defer></script>
+    <script src="./src/js/language.js" defer></script>
   </head>
+
   <header id="header" class="header">
     <div class="header-container">
       <div class="burger-menu">
