--- a/price.html
+++ b/price.html
@@ -1,33 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Кодировка и масштабирование -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/img/kaskad/hero3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Favicon -->
+    <link rel="icon" href="./favicon.png" type="image/png" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="./favicon.png" type="image/png" />
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="./src/style.css" />
+
+    <!-- Title & Meta Description -->
     <title>Автосервіс Каскад у Павлограді | Ремонт авто, діагностика, ТО</title>
     <meta
       name="description"
-      content="🔧 Автосервіс «Каскад» у Павлограді: професійний ремонт та обслуговування автомобілів.  
-✔ Встановлення та ремонт ГБО  
-✔ Обслуговування кондиціонерів  
-✔ Ремонт двигунів, ходової частини, трансмісії  
-✔ Кузовні роботи (фарбування, рихтування, видалення вм’ятин)  
-✔ Розвал-сходження, заміна шин і балансування  
-✔ Повна діагностика, ТО, заміна мастила та фільтрів  
-🚗 Дзвоніть!"
+      content="🔧 Автосервіс «Каскад» у Павлограді: ремонт, діагностика, ТО, ГБО, кондиціонери, двигуни, ходова, кузовні роботи, шиномонтаж. 🚗 Телефонуйте зараз!"
     />
-    <link rel="stylesheet" href="./src/style.css" />
-    <link rel="stylesheet" href="./src/js/main.js" />
-    <link rel="stylesheet" href="./src/js/language.js" />
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://kaskad.in.ua/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Автосервіс Каскад у Павлограді | Ремонт авто, діагностика, ТО"
+    />
+    <meta
+      property="og:description"
+      content="🔧 Автосервіс «Каскад»: ремонт та обслуговування авто у Павлограді. ГБО, кондиціонери, двигуни, ходова, кузовні роботи. ☎️ Телефонуйте!"
+    />
+    <meta property="og:image" content="https://kaskad.in.ua/images/logo.png" />
+    <meta property="og:url" content="https://kaskad.in.ua/" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Автосервіс Каскад у Павлограді" />
+    <meta
+      name="twitter:description"
+      content="🔧 Автосервіс «Каскад»: ремонт, діагностика, ТО, ГБО, кондиціонери, двигуни, ходова. ☎️"
+    />
+    <meta name="twitter:image" content="https://kaskad.in.ua/images/logo.png" />
+
+    <!-- Scripts -->
+    <script src="./src/js/main.js" defer></script>
+    <script src="./src/js/language.js" defer></script>
   </head>
   <header id="header" class="header">
     <div class="header-container">
