--- a/ustanovka-gbo.html
+++ b/ustanovka-gbo.html
@@ -1,33 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Кодировка и масштабирование -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/img/kaskad/hero3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Favicon -->
+    <link rel="icon" href="./favicon.png" type="image/png" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="./favicon.png" type="image/png" />
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="./src/style.css" />
+
+    <!-- Title & Meta Description -->
     <title>Газобалонне обладнання у Павлограді | Газ на авто</title>
     <meta
       name="description"
-      content="✔ Встановлення газового обладнання (ГБО 4-го та 5-го покоління)
-      ✔ Діагностика та ремонт газових систем будь-якої складності
-      ✔ Налаштування та калібрування електронних блоків управління
-      ✔ Заміна фільтрів, форсунок, редукторів
-      ✔ Технічне обслуговування ГБО (профілактика, чистка, перевірка герметичності)
-      ✔ Консультації щодо експлуатації та підвищення ефективності роботи системи
-      
-      🚗 Економте на паливі без втрати потужності! ☎️ Телефонуйте та записуйтесь!"
+      content="✔ Встановлення газового обладнання (ГБО 4-го та 5-го покоління) ✔ Діагностика, ремонт, калібрування ✔ Заміна фільтрів, форсунок, редукторів ✔ ТО ГБО: чистка, герметичність ✔ Консультації щодо експлуатації 🚗 Економте на паливі без втрати потужності!"
     />
-    <link rel="stylesheet" href="./src/style.css" />
-    <link rel="stylesheet" href="./src/js/main.js" />
-    <link rel="stylesheet" href="./src/js/language.js" />
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://kaskad.in.ua/gbo" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Газобалонне обладнання у Павлограді | Встановлення ГБО"
+    />
+    <meta
+      property="og:description"
+      content="Автосервіс Каскад: встановлення, діагностика, ремонт та обслуговування ГБО. Гарантія якості, економія пального, професійний підхід."
+    />
+    <meta property="og:image" content="https://kaskad.in.ua/images/logo.png" />
+    <meta property="og:url" content="https://kaskad.in.ua/gbo" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ГБО у Павлограді | Автосервіс Каскад" />
+    <meta
+      name="twitter:description"
+      content="Газ на авто — якісно, безпечно, вигідно. Дзвоніть!"
+    />
+    <meta name="twitter:image" content="https://kaskad.in.ua/images/logo.png" />
+
+    <!-- Scripts -->
+    <script src="./src/js/main.js" defer></script>
+    <script src="./src/js/language.js" defer></script>
   </head>
   <header id="header" class="header">
     <div class="header-container">
