--- a/service-catalog.html
+++ b/service-catalog.html
@@ -1,38 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Кодировка и масштабирование -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/img/kaskad/hero3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Favicon -->
+    <link rel="icon" href="./favicon.png" type="image/png" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="./favicon.png" type="image/png" />
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="./src/style.css" />
+
+    <!-- Title & Meta Description -->
     <title>
-      Автосервіс Каскад у Павлограді | Повний комплекс ремонту та обслуговування
-      авто
+      Автосервіс Каскад у Павлограді | Повний ремонт та обслуговування авто
     </title>
     <meta
       name="description"
-      content="🚗 Автосервіс «Каскад» у Павлограді – 100+ видів робіт для вашого авто! 
-      ✔ Комплексна діагностика та ремонт 
-      ✔ Двигуни, коробки передач, ходова частина 
-      ✔ Кузовний ремонт та фарбування 
-      ✔ ГБО монтаж та обслуговування 
-      ✔ Електроніка та автопроводка 
-      ✔ Шиномонтаж та розвал-сходження 
-      ✔ ТО та сервісне обслуговування 
-      🔧 Гарантія якості ☎️ Працюємо без вихідних!"
+      content="🚗 Автосервіс «Каскад» у Павлограді – 100+ видів робіт для вашого авто: діагностика, двигун, коробка, кузов, електроніка, ГБО, шиномонтаж, ТО. Працюємо без вихідних!"
     />
-    <link rel="stylesheet" href="./src/style.css" />
-    <link rel="stylesheet" href="./src/js/main.js" />
-    <link rel="stylesheet" href="./src/js/language.js" />
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://kaskad.in.ua/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Автосервіс Каскад у Павлограді | Повний комплекс послуг"
+    />
+    <meta
+      property="og:description"
+      content="Автосервіс «Каскад» — ремонт, діагностика, обслуговування авто. Гарантія якості. Працюємо щодня у Павлограді!"
+    />
+    <meta property="og:image" content="https://kaskad.in.ua/images/logo.png" />
+    <meta property="og:url" content="https://kaskad.in.ua/" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Автосервіс Каскад | Павлоград" />
+    <meta
+      name="twitter:description"
+      content="Діагностика, ремонт, ТО, ГБО — все для вашого авто!"
+    />
+    <meta name="twitter:image" content="https://kaskad.in.ua/images/logo.png" />
+
+    <!-- Scripts -->
+    <script src="./src/js/main.js" defer></script>
+    <script src="./src/js/language.js" defer></script>
   </head>
+
   <header id="header" class="header">
     <div class="header-container">
       <div class="burger-menu">
