--- a/foto-gallery.html
+++ b/foto-gallery.html
@@ -1,27 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-LFYC21VZB6"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-LFYC21VZB6");
+    </script>
+
+    <!-- Meta -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/img/kaskad/hero3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Title -->
+    <title>АС КАСКАД</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="./src/img/kaskad/hero3.png" type="image/svg+xml" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>АС КАСКАД</title>
+
+    <!-- CSS -->
     <link rel="stylesheet" href="./src/style.css" />
-    <link rel="stylesheet" href="./src/js/main.js" />
-    <link rel="stylesheet" href="./src/js/1-gallery.js" />
-    <link rel="stylesheet" href="./src/js/language.js" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.10.3/simple-lightbox.min.css"
     />
+
+    <!-- Scripts -->
+    <script src="./src/js/main.js" defer></script>
+    <script src="./src/js/1-gallery.js" defer></script>
+    <script src="./src/js/language.js" defer></script>
   </head>
+
   <header id="header" class="header">
     <div class="header-container">
       <div class="burger-menu">
