--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
     <link rel="stylesheet" href="./src/style.css" />
 
     <!-- Title & Meta Description -->
-    <title>Автосервіс Каскад у Павлограді | Ремонт авто, діагностика, ТО</title>
+    <title>
+      СТО Каскад Павлоград – Ремонт автомобилей, Установка ГБО, Подбор запчастей
+    </title>
     <meta
       name="description"
-      content="🔧 Автосервіс «Каскад» у Павлограді: професійний ремонт та обслуговування автомобілів. ✔ Встановлення та ремонт ГБО ✔ Обслуговування кондиціонерів ✔ Ремонт двигунів, ходової частини, трансмісії ✔ Кузовні роботи ✔ Розвал-сходження, заміна шин і балансування ✔ Повна діагностика, ТО, заміна мастила та фільтрів 🚗 Дзвоніть!"
+      content="Автосервис «Каскад» в Павлограде – профессиональный ремонт и обслуживание автомобилей, установка ГБО, диагностика, подбор и заказ автозапчастей. Качество, гарантия 20 лет опыта."
     />
 
     <!-- Canonical -->
