--- a/parts.html
+++ b/parts.html
@@ -35,10 +35,12 @@
     <link rel="stylesheet" href="./src/style.css" />
 
     <!-- Title & Meta Description -->
-    <title>Запчастини на авто в Павлограді | Автодеталі з гарантією</title>
+    <title>
+      Подбор автозапчастей Павлоград – Оригинальные и аналоги | СТО Каскад
+    </title>
     <meta
       name="description"
-      content="🔧 Автосервіс «Каскад» у Павлограді — підбір та постачання оригінальних і аналогових автозапчастин з гарантією. Знайдемо деталі для будь-якого авто!"
+      content="Подбор и заказ автозапчастей в Павлограде на СТО «Каскад». Оригинальные запчасти и качественные аналоги под ваш автомобиль. Быстро, надежно и с гарантией."
     />
 
     <!-- Canonical -->
