--- a/service-catalog.html
+++ b/service-catalog.html
@@ -36,11 +36,11 @@
 
     <!-- Title & Meta Description -->
     <title>
-      Автосервіс Каскад у Павлограді | Повний ремонт та обслуговування авто
+      СТО Павлоград – Ремонт Двигателя, Ходовой, Диагностика | Автосервис Каскад
     </title>
     <meta
       name="description"
-      content="🚗 Автосервіс «Каскад» у Павлограді – 100+ видів робіт для вашого авто: діагностика, двигун, коробка, кузов, електроніка, ГБО, шиномонтаж, ТО. Працюємо без вихідних!"
+      content="Все виды услуг СТО в Павлограде: ремонт двигателя, ходовой части, диагностика, замена масел и фильтров. Профессиональные мастера и современное оборудование."
     />
 
     <!-- Canonical -->
