--- a/ustanovka-gbo.html
+++ b/ustanovka-gbo.html
@@ -35,10 +35,12 @@
     <link rel="stylesheet" href="./src/style.css" />
 
     <!-- Title & Meta Description -->
-    <title>Газобалонне обладнання у Павлограді | Газ на авто</title>
+    <title>
+      Установка ГБО Павлоград – Установка, Настройка и Сервис ГБО | СТО Каскад
+    </title>
     <meta
       name="description"
-      content="✔ Встановлення газового обладнання (ГБО 4-го та 5-го покоління) ✔ Діагностика, ремонт, калібрування ✔ Заміна фільтрів, форсунок, редукторів ✔ ТО ГБО: чистка, герметичність ✔ Консультації щодо експлуатації 🚗 Економте на паливі без втрати потужності!"
+      content="Установка, настройка и обслуживание ГБО в Павлограде на СТО «Каскад». Работаем с Lovato, Tomasetto, Digitronic и другими. Гарантия, качественный монтаж и сертификат."
     />
 
     <!-- Canonical -->
